[package]
name = "raytracer"
version = "0.1.0"
authors = ["Richard Muri"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "initial_image"
path = "src/bin/initial_image/main.rs"


[lib]
name = "vec3"
path = "src/lib/vec3/lib.rs"

[dependencies]
fmt = "0.1.0"
impl_ops = "0.1.1"
num = "0.4.0"
num-traits = "0.2.15"
ops = "0.6.0"

